test/files/neg/t1275.check
t1275.scala:11: error: type mismatch;
 found   : xs.MyType[a]
 required: s
     = xs f
          ^
one error found
